Computer vision done

--- a/src/rubot_slam/config/waypoints.yaml
+++ b/src/rubot_slam/config/waypoints.yaml
@@ -1,4 +1,12 @@
-goals: [{"x": -0.5, "y": 0.8, "w": 90}, 
-        {"x": -0.5, "y": -0.5, "w": 180},
-        {"x": 0.4, "y": 0.9, "w": 90},
-        {"x": -0.5, "y": 0.8, "w": 90}]
+goals: [{"x": -0.5,
+         "y": 0.8,
+         "w": 90}, 
+        {"x": -0.5,
+         "y": -0.5,
+         "w": 180},
+        {"x": 0.4,
+         "y": 0.9,
+         "w": 90},
+        {"x": -0.5,
+         "y": 0.8,
+         "w": 90}]
